# diepcustom

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  PETTINGZOO_REWARDS_QUICKSTART.md  README.md  package-lock.json  package.json  tsup.config.ts
.github/workflows/: typescript-check.yml
RL_testing/: CNN.py  LINEAR.py  RPPO_input.py  initial_testing.py  observation_state.md  ray_test.py  requirements.txt  sb3_single_agent_env.py  train_recurrent_ppo.py
RL_testing/SB3_test/: README.md  __init__.py  dummy_bots.py  eval_with_visuals.py  play_saved_model.py  random_dummy_bots_smoke.py  single_agent_vs_bots_env.py  train_rppo_vs_dummy_bots.py
RL_training/: __init__.py  actions.py  agents.py  auto_upgrade.py  auto_upgrade_example.py  headless.py  pettingzoo_env.py  rewards.py  spaces.py
RL_training/observations/: __init__.py  combat.py  spaces.py
client/: config.js  input.js  loader.js
conformance/entity-core/: compare-parity.js  golden.test.js  report-ts.js
conformance/fixtures/: entity-core-golden.json  gameplay-golden.json  physics-golden.json  protocol-golden.json
conformance/gameplay/: benchmark-parity.js  compare-parity.js  golden.test.js  report-ts.js
conformance/headless/: benchmark-headless.js  determinism.test.js  pettingzoo-env.test.js  python-ctypes.test.js  python_combat_observation_parity.py  python_combat_observation_smoke.py  python_ctypes_smoke.py  python_gym_combat_wrapper_smoke.py  python_pettingzoo_api_test.py  python_pettingzoo_smoke.py  python_sb3_combat_smoke.py  python_training_benchmark.py
conformance/headless-parity/: compare-constructor-parity.js  rng-reference.js
conformance/headless/python/: agents.py  diep_headless.py  pettingzoo_env.py
conformance/physics/: compare-parity.js  golden.test.js  report-ts.js
conformance/protocol/: compare-parity.js  golden.test.js  report-ts.js
cpp/include/diepcustom/: entity_core.hpp  gameplay.hpp  headless.hpp  headless_c_api.h  headless_tank_defs.generated.hpp  physics.hpp  protocol.hpp
cpp/src/: entity_core.cpp  gameplay.cpp  headless.cpp  headless_c_api.cpp  physics.cpp  protocol.cpp
cpp/tests/: entity_core_report.cpp  gameplay_report.cpp  headless_c_api_smoke_test.cpp  headless_smoke_test.cpp  physics_report.cpp  protocol_golden_test.cpp  protocol_report.cpp
cpp/tools/: generate_headless_tank_defs.py  headless_main.cpp
docs/: cpp-migration-status.md  headless-pettingzoo-api.md  headless-rl-action-abi.md  headless-rl-handoff.md
docs/migration/: phase-c-entity-core-map.md
observability/: README.md  __init__.py  config.py  requirements-extras.txt
observability/core/: __init__.py  metrics_schema.py  observation_schema.py  stats_bridge.py
observability/logging/: __init__.py  diep_metrics_callback.py  wandb_logger.py
observability/runs/: benchmarks.md
observability/runs/eval-smoke/: config.json
observability/runs/eval-smoke/eval/episode_000000/: episode_summary.json
observability/runs/run-20260608T212701Z-28500/: config.json
observability/runs/run-20260608T212758Z-40458/: config.json  episodes.jsonl
observability/runs/train-video-20260608T190021/: config.json  episodes.jsonl
observability/runs/train-video-20260608T190021/eval/episode_000000/: episode_summary.json
observability/tests/: test_episode_stats.py  test_observation_shapes.py  test_reward_components.py  test_video_pipeline.py
observability/video/: __init__.py  render_grid_obs.py  render_overlay.py  video_writer.py
src/: Client.ts  Game.ts  config.ts  index.ts  util.ts
src/Coder/: Writer.ts
src/Const/: Commands.ts  DevTankDefinitions.ts  DynamicTankDefinitions.ts  Enums.ts  TankDefinitions.json  TankDefinitions.ts
src/Entity/: AI.ts  BaseDrones.ts  Live.ts  Object.ts
src/Entity/Boss/: AbstractBoss.ts  Defender.ts  FallenBooster.ts  FallenOverlord.ts  Guardian.ts  Summoner.ts  aim.ts
src/Entity/Misc/: ArenaCloser.ts  BaseDrones.ts  Dominator.ts  MazeWall.ts  Mothership.ts  TeamBase.ts  TeamEntity.ts
src/Entity/Misc/Boss/: FallenAC.ts  FallenMegaTrapper.ts  FallenSpike.ts
src/Entity/Shape/: Pentagon.ts
src/Entity/Tank/: Addons.ts  AutoTurret.ts  Barrel.ts  TankBody.ts
src/Entity/Tank/Projectile/: Bullet.ts  Drone.ts  Minion.ts  NecromancerSquare.ts  Rocket.ts  Skimmer.ts  Trap.ts
src/Gamemodes/: Domination.ts  Maze.ts  Mothership.ts  Sandbox.ts  Survival.ts  Tag.ts  Team2.ts  Team4.ts
src/Gamemodes/Benchmark/: Crashers.ts  Players.ts
src/Gamemodes/Misc/: DomTest.ts  FactoryTest.ts  Jungle.ts  Spikebox.ts  Testing.ts  common.ts
src/Misc/: BossManager.ts  MazeGenerator.ts
src/Native/: Arena.ts  Camera.ts  ClientHandle.ts  FieldGroups.ts  Manager.ts  TEMPLATIZER.js
src/Physics/: HashGrid.ts  Vector.ts
src/Systems/: MazeGenerator.ts
test/e2e/: server.test.js
test/helpers/: register-ts.js  server.js
test/unit/: coder.test.js  util.test.js
